Update to Coq 8.13

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-/Makefile.coq
-/Makefile.coq.conf
-/.coqdeps.d
-.direnv
-
-.*.aux
 *.a
 *.cma
 *.cmi
@@ -22,15 +16,23 @@
 *.v.d
 *.vio
 *.vo
+*.vok
+*.vos
+.*.aux
+.Makefile.d
 .coq-native/
 .csdp.cache
+.direnv
 .lia.cache
 .nia.cache
 .nlia.cache
 .nra.cache
+/.coqdeps.d
+/Makefile.conf
+/Makefile.coq
+/Makefile.coq.conf
 csdp.cache
 lia.cache
 nia.cache
 nlia.cache
 nra.cache
-/Makefile.conf
