--- a/.github/workflows/coq-ci.yml
+++ b/.github/workflows/coq-ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: coq-community/docker-coq-action@v1
         with:
-          opam_file: 'coq-constructive-ltl.opam'
+          opam_file: 'coq-cds4ltl.opam'
           custom_image: ${{ matrix.image }}
 
 # See also:
